# rust-seL4-sel4cp-demo

./: Cargo.toml  Makefile  banscii.system  banscii_zcu102.system  rust-toolchain.toml  test.py
.github/workflows/: main.yml
crates/artist/: Cargo.toml
crates/assistant/: Cargo.toml
crates/assistant/src/: main.rs
crates/eth-client/: Cargo.toml
crates/eth-client-remote/: Cargo.toml
crates/eth-client-remote/src/: main.rs
crates/eth-client/src/: main.rs
crates/eth-driver/: Cargo.toml
crates/eth-driver-remote/: Cargo.toml
crates/eth-driver-remote/src/: main.rs
crates/eth-driver/src/: main.rs
crates/gem/: Cargo.toml  Makefile  build.rs  libgem.c
crates/gem/c_src/: common  xemacps_bdring.c  xemacps_example.h  xemacps_example_util.c  xemacps_g.c
crates/gem/src/: main.rs
crates/interfaces/ethernet-interface-types/: Cargo.toml
crates/interfaces/ethernet-interface-types/src/: lib.rs
crates/interfaces/timer-interface-types/: Cargo.toml
crates/interfaces/timer-interface-types/src/: lib.rs
crates/interfaces/uart-interface-types/: Cargo.toml
crates/pl011-driver/: Cargo.toml
crates/point-to-point-phy/: Cargo.toml
crates/point-to-point-phy/src/: lib.rs
crates/timer/: Cargo.toml
crates/timer-interface-types/src/: lib.rs
crates/timer/src/: device.rs  main.rs
crates/uart-driver/: Cargo.toml  Makefile  libuartps.c
crates/uart-driver/src/: device.rs
