[workspace]

resolver = "2"

# we need to list *all* crates here
members = [
    "crates/artist",
    "crates/assistant",
    "crates/pl011-driver",
    "crates/uart-driver",
    "crates/eth-driver",
    "crates/eth-driver-remote",
    "crates/eth-client",
    "crates/eth-client-remote",
    "crates/timer",
]

[workspace.dependencies]
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
sel4-shared-ring-buffer = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
sel4-bounce-buffer-allocator = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
sel4-externally-shared = { git = "https://github.com/coliasgroup/rust-seL4", rev = "748ec222e67f00fa849d8ded4d8bc4c3a1840f37", default-features = false }
