[package]
name = "eth-driver"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp = { workspace = true, features = ["alloc"] }
sel4-externally-shared = { workspace = true, features = ["unstable", "alloc"]}
sel4-shared-ring-buffer.workspace = true
sel4-bounce-buffer-allocator.workspace = true
eth-driver-interface = { path = "../interfaces/ethernet-interface-types" }

