[package]
name = "point-to-point-phy"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp.workspace = true
sel4-shared-ring-buffer.workspace = true
eth-driver-interface = { path = "../interfaces/ethernet-interface-types" }
smoltcp = { version = "0.10.0", default-features = false, features = ["proto-ipv4","medium-ethernet","socket-raw"] }
heapless = "0.7.16"
