[package]
name = "timer-interface-types"
version = "0.1.0"
authors = ["Michal Podhradsky <michal.podhradsky@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
num_enum = { version = "0.5.9", default-features = false }
zerocopy = "0.6.1"
time = { version = "0.3", default-features = false }
